--- a/javascript/effect/quizEffect03.html
+++ b/javascript/effect/quizEffect03.html
@@ -175,6 +175,221 @@
                     <div class="result"></div>
                 </div>
             </div>
+            <div class="quiz">
+                <span class="quiz__type"></span>
+                <h2 class="quiz__question">
+                    <span class="number"></span>
+                    <div class="ask">
+
+                    </div>
+                </h2>
+                <div class="quiz__view">
+                    <div class="true">정답입니다</div>
+                    <div class="false">틀렸습니다</div>
+                    <div class="dog">
+                        <div class="head">
+                            <div class="ears"></div>
+                            <div class="face"></div>
+                            <div class="eyes">
+                                <div class="teardrop"></div>
+                            </div>
+                            <div class="nose"></div>
+                            <div class="mouth">
+                                <div class="tongue"></div>
+                            </div>
+                            <div class="chin"></div>
+                        </div>
+                        <div class="body">
+                            <div class="tail"></div>
+                            <div class="legs"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="quiz__answer">
+                    <input type="text" class="input" placeholder="정답을 적어주세요">
+                    <button class="confirm">정답확인</button>
+                    <div class="result"></div>
+                </div>
+            </div>
+            <div class="quiz">
+                <span class="quiz__type"></span>
+                <h2 class="quiz__question">
+                    <span class="number"></span>
+                    <div class="ask">
+                    </div>
+                </h2>
+                <div class="quiz__view">
+                    <div class="true">정답입니다</div>
+                    <div class="false">틀렸습니다</div>
+                    <div class="dog">
+                        <div class="head">
+                            <div class="ears"></div>
+                            <div class="face"></div>
+                            <div class="eyes">
+                                <div class="teardrop"></div>
+                            </div>
+                            <div class="nose"></div>
+                            <div class="mouth">
+                                <div class="tongue"></div>
+                            </div>
+                            <div class="chin"></div>
+                        </div>
+                        <div class="body">
+                            <div class="tail"></div>
+                            <div class="legs"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="quiz__answer">
+                    <input type="text" class="input" placeholder="정답을 적어주세요">
+                    <button class="confirm">정답확인</button>
+                    <div class="result"></div>
+                </div>
+            </div>
+            <div class="quiz">
+                <span class="quiz__type"></span>
+                <h2 class="quiz__question">
+                    <span class="number"></span>
+                    <div class="ask">
+
+                    </div>
+                </h2>
+                <div class="quiz__view">
+                    <div class="true">정답입니다</div>
+                    <div class="false">틀렸습니다</div>
+                    <div class="dog">
+                        <div class="head">
+                            <div class="ears"></div>
+                            <div class="face"></div>
+                            <div class="eyes">
+                                <div class="teardrop"></div>
+                            </div>
+                            <div class="nose"></div>
+                            <div class="mouth">
+                                <div class="tongue"></div>
+                            </div>
+                            <div class="chin"></div>
+                        </div>
+                        <div class="body">
+                            <div class="tail"></div>
+                            <div class="legs"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="quiz__answer">
+                    <input type="text" class="input" placeholder="정답을 적어주세요">
+                    <button class="confirm">정답확인</button>
+                    <div class="result"></div>
+                </div>
+            </div>
+            <div class="quiz">
+                <span class="quiz__type"></span>
+                <h2 class="quiz__question">
+                    <span class="number"></span>
+                    <div class="ask">
+
+                    </div>
+                </h2>
+                <div class="quiz__view">
+                    <div class="true">정답입니다</div>
+                    <div class="false">틀렸습니다</div>
+                    <div class="dog">
+                        <div class="head">
+                            <div class="ears"></div>
+                            <div class="face"></div>
+                            <div class="eyes">
+                                <div class="teardrop"></div>
+                            </div>
+                            <div class="nose"></div>
+                            <div class="mouth">
+                                <div class="tongue"></div>
+                            </div>
+                            <div class="chin"></div>
+                        </div>
+                        <div class="body">
+                            <div class="tail"></div>
+                            <div class="legs"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="quiz__answer">
+                    <input type="text" class="input" placeholder="정답을 적어주세요">
+                    <button class="confirm">정답확인</button>
+                    <div class="result"></div>
+                </div>
+            </div>
+            <div class="quiz">
+                <span class="quiz__type"></span>
+                <h2 class="quiz__question">
+                    <span class="number"></span>
+                    <div class="ask">
+
+                    </div>
+                </h2>
+                <div class="quiz__view">
+                    <div class="true">정답입니다</div>
+                    <div class="false">틀렸습니다</div>
+                    <div class="dog">
+                        <div class="head">
+                            <div class="ears"></div>
+                            <div class="face"></div>
+                            <div class="eyes">
+                                <div class="teardrop"></div>
+                            </div>
+                            <div class="nose"></div>
+                            <div class="mouth">
+                                <div class="tongue"></div>
+                            </div>
+                            <div class="chin"></div>
+                        </div>
+                        <div class="body">
+                            <div class="tail"></div>
+                            <div class="legs"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="quiz__answer">
+                    <input type="text" class="input" placeholder="정답을 적어주세요">
+                    <button class="confirm">정답확인</button>
+                    <div class="result"></div>
+                </div>
+            </div>
+            <div class="quiz">
+                <span class="quiz__type"></span>
+                <h2 class="quiz__question">
+                    <span class="number"></span>
+                    <div class="ask">
+
+                    </div>
+                </h2>
+                <div class="quiz__view">
+                    <div class="true">정답입니다</div>
+                    <div class="false">틀렸습니다</div>
+                    <div class="dog">
+                        <div class="head">
+                            <div class="ears"></div>
+                            <div class="face"></div>
+                            <div class="eyes">
+                                <div class="teardrop"></div>
+                            </div>
+                            <div class="nose"></div>
+                            <div class="mouth">
+                                <div class="tongue"></div>
+                            </div>
+                            <div class="chin"></div>
+                        </div>
+                        <div class="body">
+                            <div class="tail"></div>
+                            <div class="legs"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="quiz__answer">
+                    <input type="text" class="input" placeholder="정답을 적어주세요">
+                    <button class="confirm">정답확인</button>
+                    <div class="result"></div>
+                </div>
+            </div>
 
         </div>
     </main>
@@ -193,7 +408,7 @@
         const quizResult = document.querySelectorAll(".quiz__answer .result");      //정답 결과
         const quizInput = document.querySelectorAll(".quiz__answer .input");        //사용자 정답
         const quizView = document.querySelectorAll(".quiz__view");                  //강아지
-        //문제정보
+        //문제정보   const obj =[{},{},{}]
         const quizInfo = [
             {
                 answerType: "웹디자인기능사 2010년 2회",
@@ -219,6 +434,43 @@
                 answerAsk: "여러 개의 검색 엔진에서 정보를 찾은 다음, 중복으로 검색된 정보는 하나로 통일하고 자체 순위 결정 방식에 의해 가장 관련성이 높은 순으로 출력해 주는 것은 무엇인가요?",
                 answerResult: "키워드 검색 엔진"
             },
+            {
+                answerType: "웹디자인기능사 2010년 4회",
+                answerNum: "5",
+                answerAsk: "색의 수축, 팽창의 효과에 가장 큰 영향을 주는 요소는?",
+                answerResult: "명도"
+            },  
+            {
+                answerType: "웹디자인기능사 2010년 4회",
+                answerNum: "6",
+                answerAsk: "기계화와 대량생산에 의한 생활용품의 품질 저하에 반대하여 윌리엄 모리스를 중심으로 영국에서 일어난 수공예 부흥 운동은?",
+                answerResult: "미술공예운동"
+            },
+            {
+                answerType: "웹디자인기능사 2010년 4회",
+                answerNum: "7",
+                answerAsk: "다음 ( )안에 알맞은 용어는? 보통 보라에서부터 빨강까지의 파장은 380nm에서 780nm의 범위이며, 이 범위는 우리 눈으로 관찰할 수 있기 때문에 이를 ( ) 이라 한다. ",
+                answerResult: "가시광선"
+            },
+            {
+                answerType: "웹디자인기능사 2010년 4회",
+                answerNum: "8",
+                answerAsk: "지역 간 또는 국가 간과 같이 지리적으로 완전하게 떨어진 곳을 연결한 통신망은?",
+                answerResult: "WAN"
+            },
+            {
+                answerType: "웹디자인기능사 2010년 4회",
+                answerNum: "9",
+                answerAsk: "인터넷 사이트롤 방문할 때 1024x768로 촤적화 되어 있는 사이트를 방문할 때가 있다. 이 사이트는 전체 화면이 한 눈에 들어오지 않아 스크롤바를 이용하거나 해상도를 높여 한 화면으로 볼 수 있도록 한다. 이때, 해상도룰 바꾸지 않고 화면을 확대하는 단축키는?",
+                answerResult: " F11"
+            },
+            {
+                answerType: "웹디자인기능사 2010년 4회",
+                answerNum: "10",
+                answerAsk: "자바스크립트의 함수 중 사용자로부터 임의의 문자를 입력받기 위한 창을 화면에 띄워 입력한 문자열을 사용할 수 있도록 하는 것은?",
+                answerResult: "prompt()	"
+            },
+            
         ]
         //문제 출력
         //quizType[0].textContent = quizInfo[0].answerType;
@@ -239,12 +491,12 @@
         //quizResult[3].textContent = quizInfo[3].answerResult;
 
         //for문
-        for(let i=0; i<4; i++){ //i<quizInfo.length;
-            quizType[i].textContent = quizInfo[i].answerType;  
-            quizNumber[i].textContent = quizInfo[i].answerNum + ". ";
-            quizAsk[i].textContent = quizInfo[i].answerAsk;
-            quizResult[i].textContent = quizInfo[i].answerResult;
-        };
+        //for(let i=0; i<4; i++){ //i<quizInfo.length;
+        //    quizType[i].textContent = quizInfo[i].answerType;  
+        //    quizNumber[i].textContent = quizInfo[i].answerNum + ". ";
+        //    quizAsk[i].textContent = quizInfo[i].answerAsk;
+        //    quizResult[i].textContent = quizInfo[i].answerResult;
+        //};
 
 
      //   const arr = [1,2,3,4,5,6,7,8,9]  //const obj =[{},{},{}]
@@ -310,12 +562,12 @@
         });
     });
  
-    quizConfirm.forEach((btn, num)=>{
-        btn.addEventListener("click",()=>{
-            const userWord = quizInput[num].value.toLowerCase().trim();
-            
-        });
-    });
+    //quizConfirm.forEach((btn, num)=>{
+    //    btn.addEventListener("click",()=>{
+    //        const userWord = quizInput[num].value.toLowerCase().trim();
+    //        
+    //    });
+    //});
 
     </script>
 </body>
