--- a/javascript/study/if.html
+++ b/javascript/study/if.html
@@ -29,13 +29,14 @@
                 <li><a href="../javascript11.html">이벤트 객체</a></li>
             </ul>
             <ul class="study">
-                <li><a href="basic.html">기본 규칙</a></li>
-                <li><a href="operator.html">연산자</a></li>
-                <li><a href="for.html">반복문</a></li>
-                <li><a href="if.html">조건문</a></li>
-                <li><a href="type.html">데이터타입</a></li>
-                <li><a href="fuction.html">함수</a></li>
-                <li><a href="var.html">지역변수/전역변수</a></li>
+                <li><a href="study/basic.html">기본 규칙</a></li>
+                <li><a href="study/operator.html">연산자</a></li>
+                <li><a href="study/for.html">반복문</a></li>
+                <li><a href="study/if.html">조건문</a></li>
+                <li><a href="study/type.html">데이터타입</a></li>
+                <li><a href="study/fuction.html">함수</a></li>
+                <li><a href="study/var.html">지역변수/전역변수</a></li>
+                <li><a href="study/element.html">요소선택</a></li>
             </ul>
         </nav>
     </header>
