--- a/javascript/study/element.html
+++ b/javascript/study/element.html
@@ -59,7 +59,36 @@
             <h3 class="t_tit2">요소선택</h3>
             <h4 class="t_tit3"> &lt;요소를 직접 선택하는 메서드&gt;</h4>
 
-            
+            <table class="t_table">
+                <thead>
+                <tr>
+                    <td class="ce">메서드</td>
+                    <td class="ce">설명</td>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td class="ce">getElementById( )</td>
+                    <td class="ce">document.getElementById('content')일 경우 HTML요소 중 id속성이 'content'인 요소를 선택</td>
+                </tr>
+                <tr>
+                    <td class="ce">getElementByClassName( )</td>
+                    <td class="ce">document.getElementByClassName('menu')일 경우 HTML요소 중 class명이 'menu'인 요소를 선택 </td>
+                </tr>
+                <tr>
+                    <td class="ce">getElementByTagName( )</td>
+                    <td class="ce">document.getElementByTagName('ul')일 경우 HTML요소 중 태그명이 'ul'인 요소를 선택</td>
+                </tr>
+                <tr>
+                    <td class="ce"></td>
+                    <td class="ce"></td>
+                </tr>
+                <tr>
+                    <td class="ce"></td>
+                    <td class="ce"></td>
+                </tr>
+                </tbody>
+            </table>
 
             <div class ="t_box">
                 var num = 5;<i>;</i><br>
