--- a/javascript/study/type.html
+++ b/javascript/study/type.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>자바스크립트 : 기본 규칙</title>
+    <title>자바스크립트 : 데이터 타입</title>
 
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/dracula.css">
@@ -44,122 +44,160 @@
 
     <main id="main">
         <div class="document">
-            <h2 class="t_tit">기본 규칙</h2>
-            <p class="t_desc">
-                자바스크립트를 다루기 위해서는 기초적인 특징과 기본 문법이 있습니다.
-            </p>
-
-            <h3 class="t_tit2">자바스크립트란?</h3>
+            <h2 class="t_tit">데이터 타입(Data Type)</h2>
             <p class="t_desc2">
-                JavaScript는 웹 페이지에서 복잡한 기능을 구현할 수 있도록 하는 스크립트 <i>프로그래밍 언어</i>입니다.
-                HTML은 정적인 레이아웃을 표현한다면, 자바스크립트는 동적인 기능을 표현합니다.
+                데이터 타입은 <i>변수에 저장되는 데이터의 유형</i>으로 원시 데이터 타입과 객체 데이터 타입으로 나뉩니다.<br>
+                <i>Primitive(원시)데이터 타입</i> - number, string, boolean, undefined, null, symbol 등<br>
+                <i>Object(객체)데이터 타입</i>- function, object, array 등<br>
+                </p>
+            <h3 class="t_tit2">1. number(숫자)데이터</h3>
+            <p class="t_desc2">
+                number(숫자)데이터는 <i>정수, 소수점, 지수</i>를 표현할 수 있습니다.
             </p>
-            <p class="t_desc">
-                자바스크립트는 1995년 넷스케이프 커뮤니케이션의 브렌던 아이크가 개발하였스며 Netscape Navigsator2.0에 구현되었습니다. 
-                1996년에는 마이크로소프트사의 Internet Explorer3.0 탑재되었으며 java 애플릿으로 구현된 웹 브라우저의 지지부진한 보급과 맞물려 빠르게 보급되었습니다. 1997년부터 ESMAScript를 따르는 표준화 작업을 통해 현재는 모든 브라우저에서 지원됩니다.
+            <p class="t_box">
+                 <i>var num1 = 10;</i><br>
+                 <i>var num2 = 10.5;</i><br>
+                 <i>var num3 = le+2;</i><br>
+                 console. log(num1);//<i>10</i><br>
+                 console. log(num2);//<i>10.5</i><br>
+                 console. log(num3);//<i>100,</i> le+2는 1*10의 2승을 의미<br>
             </p>
-
-            <h3 class="t_tit2">자바스크립트 기본 규칙</h3>
-            <h4 class="t_tit3">1. 세미콜론(;)</h4>
-            <p class="t_desc">
-                하나의 실행문이 끝나면 마지막에 세미콜론(;)을 붙여 줍니다.
-                세미콜론(;)을 붙여 주지 않아도 상관은 없습니다.
+            <h3 class="t_tit2">2. string(문자)데이터</h3>
+            <p class="t_desc2">
+                string(문자)데이터는 <i>' '또는" "</i>으로 표현할 수 있습니다. (보통 문자데이터는 작은따옴표로 표현)
             </p>
+            <p class="t_box">
+                 <i>var str1 = '문자';</i><br>
+                 <i>var str2 = "문자";</i><br>
+                 console. log(str1);//<i>문자</i><br>
+                 console. log(str2);//<i>문자</i><br>
+            </p>
+            <P>문자 안에 문자가 들어갈 경우
+            </P>
+            <p class="t_box">
+                <i>var str1 = '문자는 "문자"';</i><br>
+                <i>var str2 = "문자는'문자'";</i><br>
+                console. log(str1);//<i>문자는 "문자"</i><br>
+                console. log(str2);//<i>문자는 '문자'</i><br>
+           </p>
+           <br>
+            <h3 class="t_tit3"><특수한 목적을 위해 \(역슬래시)문자를 사용하는 경우></h3>
+            <h4 class="t_tit3">이스케이프시퀀스(Escape Sequence)</h4>
+           <table class="t_table">
+            <thead>
+                <tr>
+                    <td class="ce">이스케이프 문자</td>
+                    <td class="ce">설명</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="ce">\n</td>
+                    <td class="ce">행바꿈</td>
+                </tr>
+                <tr>
+                    <td class="ce">\t</td>
+                    <td class="ce">탭문자</td>
+                </tr>
+                <tr>
+                    <td class="ce">\\</td>
+                    <td class="ce">역슬래시</td>
+                </tr>
+                <tr>
+                    <td class="ce">\'</td>
+                    <td class="ce">작은따옴표</td>
+                </tr>
+                <tr>
+                    <td class="ce">\"</td>
+                    <td class="ce">큰따옴표</td>
+                </tr>
+            </tbody>
+           </table>
+            <br>
+            <p>[예시]</p>
             <div class ="t_box">
-                var num = 5;<i>;</i><br>
-                doccument.write(num)<i>;</i><br>
+                alert('자바스립트<i>\n</i>제이쿼리');
             </div>
-
-            <h4 class="t_tit3">2. 대소문자</h4>
-            <p class="t_desc">
-                자바스크립트는 명령어는 대소문자를 구별합니다.
-                console와 Console은 각각 다른 문자열로 처리됩니다.
+            <p><i>태그로 alert( )에서는 행을 바꿀 수 없기 때문에 이스케이프 문자 '\n'사용</i></p>
+            <p>[결과]</p>
+            <div class="t_box">
+            자바스크립트<br>
+            제이쿼리
+            </div>
+            <br>
+            <h3 class="t_tit2">3. boolean(논리)데이터</h3>
+            <p class="t_desc2">
+                boolean(논리)데이터는 <i>true와 false</i>의 값을 표현합니다.
             </p>
-
-            <h4 class="t_tit3">3. 들여쓰기</h4>
-            <p class="t_desc">
-                자바스크립트는 가독성을 위하여 <i>들여쓰기</i>를 사용합니다.
+            <p class="t_box">
+                 <i>var temp1 = (5 > 4);</i><br>
+                 <i>var temp2 = (5 > 4);</i><br>
+                 console. log(temp1);//<i>true</i><br>
+                 console. log(temp2);//<i>false</i><br>
             </p>
-
-            <h4 class="t_tit3">4. 주석</h4>
-            <p class="t_desc">
-                자바스크립트 주석은 일반적으로 특정 코드에 대한 설명을 입력하거나
-                특정한 부분의 코드가 실행되지 않도록 사용합니다.
-                주석 표시는 프로그램에 영향을 미치지 않습니다.
+            <p class="t_desc2">
+                boolean에서<i>0값은 false를 의미</i>하며 0값 이외의 숫자나 문자는 true를 의미합니다.
             </p>
-            <hr>
-            <h3 class="t_tit2">출력하는 방법</h3>
-            <h4 class="t_tit3"> 1.HTML문서 내부에서 적용할 수 있습니다.</h4>
-            <h4 class="t_tit3"> 1.HTML문서 외부에서 적용할 수 있습니다.</h4>
-
-            <h3 class ="t_tit2">적용 위치</h3>
-            <h4 class="t_tit3">
-               1.&lt;head&gt;태그 내에 위치할 수 있다.
-            </h4>
-            <h4 class="t_tit3">
-                2.&lt;/body&gt;태그위에 위치할 수 있다.
-            </h4>
-            <h3 class ="t_tit2">기본 명령어</h3>
-            <table class="t_table">
-                <thead>
-                    <tr>
-                    <td class="ce">분류</td>
-                    <td class="ce">메서드</td>
-                   </tr>
-                </thead>
-                 <tbody> 
-                    <tr>
-                        <td class="ce">입력</td>
-                        <td class="ce">prompt()</td>
-                    </tr>
-                    <tr>
-                        <td class="ce" rowspan="3">출력</td>
-                        <td class="ce">document.write()</td>
-                    </tr>
-                    <tr>
-                        <td class="ce">alert()</td>
-                    </tr>
-                    <tr>
-                        <td class="ce">console.log()</td>
-                    </tr>
-                    <tr>
-                        <td class="ce">확인</td>
-                        <td class="ce">confirm()</td>
-                    </tr>   
-                </tbody>    
-            </table>
-
-                
-
-            <hr>
-            <h3 class ="t_tit2">자바스크립트 사용 방법</h3>
-            <p class="t_desc">
-                자바스크립트 사용방법은 
-                1. 외부파일 연결하는 방법
-                2. 스크립트 태그에 사용하는 방법
-                3.태그에 직접 기술하는 방법
+            <p class="t_box">
+                <i>var temp1 = 0;</i><br>
+                <i>var temp2 = 1;</i><br>
+                console. log(boolean(temp1));//<i>false</i><br>
+                console. log(boolean(temp2));//<i>true</i><br>
+           </p>
+           <p><i>boolean()명령어는 변수의 값을 false나 true로 변환시켜주는 명령어</i></p>
+           <br>
+           <br>
+           <h3 class="t_tit2">4. undefined 데이터</h3>
+            <p class="t_desc2">
+                undefined 데이터는 변수는 선언하였으나 데이터 값을 지정하지 않았을 경우나 
+                객체의 속성 값을 지정하지 않았을 경우에
+                <i>자동으로 저장되는 값</i>입니다.
             </p>
-<div class="t_code">
-    <pre><code>
-        &lt;!DOCTYPE html&gt;
-&lt;html lang="ko"&gt;
-&lt;head&gt;
-    &lt;meta charset="UTF-8"&gt;
-    &lt;title&gt;Javasript&lt;/title&gt;
-    &lt;!-- 1. 외부 파일로 로드하는 방법 --&gt;
-    &lt;script type="text/Javasript" src="js/script.js"&gt;&lt;/script&gt;
-    &lt;!-- 2. script 태그 사이에 기술하는 방법 --&gt;
-    &lt;script&gt;
-        document.write("Javasript");
-    &lt;/script&gt;
-&lt;/head&gt;
-&lt;body&gt;
-    &lt;!-- 3. 태그에 직접 기술하는 방법 --&gt;
-    &lt;a href="#" onclick="alert('Javasript')"&gt;&lt;/a&gt;
-&lt;/body&gt;
-&lt;/html&gt;
-    </code></pre>
-</div>
+            <p class="t_box">
+                 var temp1 = 10;<br>
+                 <i>var temp2;</i>//변수에 데이터 값이 없음<br>
+                 console. log(temp1);//10<br>
+                 console. log(temp2);//<i>undefined</i><br>
+            </p>
+            <p class="t_box">
+                var obj = {};<br>
+                obj.name = '홍길동';<br>
+                <i>obj.age;</i>//객체에 속성 값이 없음<br>
+                console. log(obj.name);//홍길동<br>
+                console. log(obj.age);//<i>undefined</i><br>
+           </p>
+           <br>
+           <br>
+           <h3 class="t_tit2">5. null 데이터</h3>
+            <p class="t_desc2">
+                null 데이터는 변수는 undefined와 유사하지만 <i>변수를 빈상태로</i> 만들거나, <i>데이터를 저장</i>하거나 <i>값이 존재하지 않을 때</i> <i>null 값을 반환</i>합니다. 
+            </p>
+            <p class="t_box">
+                 var obj = 10;<br>
+                 <i>obj = null;</i><br>
+                 console. log(obj);//<i>null,변수를 빈 상태로 만듬</i><br>
+                 <i>var obj = document.getElementById('gnb');</i><br>
+                 console. log(obj);//<i>변수에 데이터 값을 저장하였으나 값이 존재하지 않을 때 null을 저장 </i><br>
+            </p>
+            <p>undefined와 null의 boolean(참,거짓의 값을 표현)은 false</p>
+            <p class="t_box">
+                var obj1; //undefined<br>
+                var obj2 = null;//null<br>
+                console. log(<i>boolean(obj1)</i>);//<i>false</i><br>
+                console. log(<i>boolean(obj2)</i>);//<i>false</i><br>
+           </p>
+           <br>
+           <br>
+           <h3 class="t_tit2">6. typeof 명령</h3>
+            <p class="t_desc2">
+            <i>변수에 저장 되어 있는 데이터의 타입</i>을 알아보려면<i>typeof명령</i>을 사용합니다.
+            </p>
+            <p class="t_box">
+                var num = 10;<br>
+                var str = '문자';<br>
+                console. log(<i>typeof</i> num);//number<br>
+                console. log(<i>typeof</i> str);//string<br>
+            </p>
         </div>
     </main>
     <!-- //main -->
