--- a/html/markup.html
+++ b/html/markup.html
@@ -132,7 +132,7 @@
         <nav class="menu">
             <ul>
                 <li><a href="basic.html">HTML기본구성</a></li>
-                <li><a href="w3c.html">W3C validator</a></li>
+                <li><a href="w3c.html">웹표준/웹접근성/웹호완성</a></li>
                 <li><a href="markup.html">마크업 기본 문법 규칙</a></li>
                 <li><a href="semantic.html">시멘틱 마크업</a></li>
                 <li><a href="blockinline.html">블록/ 인라인 요소</a></li>
