--- a/javascript/study/if.html
+++ b/javascript/study/if.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>자바스크립트 : 기본 규칙</title>
+    <title>자바스크립트 : 조건문</title>
 
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/dracula.css">
@@ -56,6 +56,7 @@
         </div>
         <div class="main_sample">
             <div class="document">
+                <h2 class="t_tit">조건문</h2>
                 <!-- 01. if문 -->
                 <div id="sample01" class="sample">
                     <h3>01. if문</h3>
