--- a/javascript/study/type.html
+++ b/javascript/study/type.html
@@ -116,7 +116,7 @@
             <br>
             <p>[예시]</p>
             <div class ="t_box">
-                alert('자바스립트<i>\n</i>제이쿼리');
+                alert('자바스크립트<i>\n</i>제이쿼리');
             </div>
             <p><i>태그로 alert( )에서는 행을 바꿀 수 없기 때문에 이스케이프 문자 '\n'사용</i></p>
             <p>[결과]</p>
