--- a/site/cardType/cardType01.html
+++ b/site/cardType/cardType01.html
@@ -33,6 +33,7 @@
             width: 1160;
             padding: 0 20px;
             margin: 0 auto;
+            min-width: 1160px;
         }
         .section {
             padding: 120px 0;
@@ -94,8 +95,15 @@
                     본코팅에 대한 감각을 익히고, 웹표준을 준
                     수하면서 코딩하는 방법을 익힙니다. 다양
                     한 예제를 통해 사이트를 만드는 기본...  </p>
-                <a class ="btn" href="/">더 자세히보기</a>
-                </div> 
+                <a class ="btn" href="/">
+                    더 자세히보기
+                    <span aria-hidden="true">
+                        <svg width="63" height="8" viewBox="0 0 63 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M62.3536 4.35355C62.5488 4.15829 62.5488 3.84171 62.3536 3.64645L59.1716 0.464466C58.9763 0.269204 58.6597 0.269204 58.4645 0.464466C58.2692 0.659728 58.2692 0.976311 58.4645 1.17157L61.2929 4L58.4645 6.82843C58.2692 7.02369 58.2692 7.34027 58.4645 7.53553C58.6597 7.7308 58.9763 7.7308 59.1716 7.53553L62.3536 4.35355ZM0 4.5H62V3.5H0V4.5Z" fill="black"/>
+                            </svg>     
+                    </span>
+                </a> 
+                </div>      
             </article> 
             <article class="card">
                 <figure class="card__header">
@@ -107,7 +115,14 @@
                     본코팅에 대한 감각을 익히고, 웹표준을 준
                     수하면서 코딩하는 방법을 익힙니다. 다양
                     한 예제를 통해 사이트를 만드는 기본...  </p>
-                <a class ="btn" href="/">더 자세히보기</a>
+                <a class ="btn" href="/">
+                    더 자세히보기
+                    <span aria-hidden="true">
+                        <svg width="63" height="8" viewBox="0 0 63 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M62.3536 4.35355C62.5488 4.15829 62.5488 3.84171 62.3536 3.64645L59.1716 0.464466C58.9763 0.269204 58.6597 0.269204 58.4645 0.464466C58.2692 0.659728 58.2692 0.976311 58.4645 1.17157L61.2929 4L58.4645 6.82843C58.2692 7.02369 58.2692 7.34027 58.4645 7.53553C58.6597 7.7308 58.9763 7.7308 59.1716 7.53553L62.3536 4.35355ZM0 4.5H62V3.5H0V4.5Z" fill="black"/>
+                            </svg>     
+                    </span>
+                </a>
                 </div> 
             </article> 
             <article class="card">
@@ -120,7 +135,14 @@
                     본코팅에 대한 감각을 익히고, 웹표준을 준
                     수하면서 코딩하는 방법을 익힙니다. 다양
                     한 예제를 통해 사이트를 만드는 기본...  </p>
-                <a class ="btn" href="/">더 자세히보기</a>
+                <a class ="btn" href="/">
+                    더 자세히보기
+                    <span aria-hidden="true">
+                        <svg width="63" height="8" viewBox="0 0 63 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M62.3536 4.35355C62.5488 4.15829 62.5488 3.84171 62.3536 3.64645L59.1716 0.464466C58.9763 0.269204 58.6597 0.269204 58.4645 0.464466C58.2692 0.659728 58.2692 0.976311 58.4645 1.17157L61.2929 4L58.4645 6.82843C58.2692 7.02369 58.2692 7.34027 58.4645 7.53553C58.6597 7.7308 58.9763 7.7308 59.1716 7.53553L62.3536 4.35355ZM0 4.5H62V3.5H0V4.5Z" fill="black"/>
+                            </svg>     
+                    </span>
+                </a>
                 </div> 
             </article> 
         </div>
