--- a/javascript/javascript03.html
+++ b/javascript/javascript03.html
@@ -147,7 +147,7 @@
             <br>
             <br>
 
-            <h3>03. 매개변수 함수 (매개변수 : 매개변수 함수 안에 있는 변수, 함수를 호출할 때 전달하는 병수 )</h3>
+            <h3>03. 매개변수 함수 (매개변수 : 매개변수 함수 안에 있는 변수, 함수를 호출할 때 전달하는 변수 )</h3>
                 <p>
                     매개변수 함수는 여러개의 데이터를 저장할 수 있다.<br>
                     변수 : 지역변수 + 전역변수 + 매개변수<br>
