--- a/site/cardType/cardType01.html
+++ b/site/cardType/cardType01.html
@@ -69,7 +69,7 @@
             margin-bottom: 10px;
         }
         .card__body .desc {
-            font-style: 18px;
+            font-size: 18px;
             line-height: 1.4;
             color: #666;
             margin-bottom: 20px;
@@ -87,7 +87,7 @@
         <div class="card__inner container">
             <article class="card">
                 <figure class="card__header">
-                    <img src="img/card_bg01.jpg" alt="웹표준 사이트 만들기">
+                    <img src="img/card_bg01_01.jpg" alt="웹표준 사이트 만들기">
                 </figure>
                 <div class="card__body">
                     <h3 class="tit">웹표준 사이트 만들기</h3>
@@ -107,7 +107,7 @@
             </article> 
             <article class="card">
                 <figure class="card__header">
-                    <img src="img/card_bg02.jpg" alt="웹표준 사이트 만들기">
+                    <img src="img/card_bg01_02.jpg" alt="웹표준 사이트 만들기">
                 </figure>
                 <div class="card__body">
                     <h3 class="tit">웹표준 사이트 만들기</h3>
@@ -127,7 +127,7 @@
             </article> 
             <article class="card">
                 <figure class="card__header">
-                    <img src="img/card_bg03.jpg" alt="웹표준 사이트 만들기">
+                    <img src="img/card_bg01_03.jpg" alt="웹표준 사이트 만들기">
                 </figure>
                 <div class="card__body">
                     <h3 class="tit">웹표준 사이트 만들기</h3>
