--- a/javascript/effect/quiz05.html
+++ b/javascript/effect/quiz05.html
@@ -68,12 +68,12 @@
             {
                 answerType: "웹디자인기능사 2015년 05회",
                 answerNum: "2",
-                answerAsk: "팽창이동패턴? ",
+                answerAsk: "점점 이동하면서 도형이 커지면서 팽창하는 패턴은? ",
                 answerChoice: {
-                    1: "색상대비",
-                    2: "계시대비",
-                    3: "채도대비",
-                    4: "명도대비",
+                    1: "반사 운용",
+                    2: "회전 운용",
+                    3: "팽창 이동 패턴",
+                    4: "조화 패턴",
                 },
                 answerResult: "3",
                 answerEx: ""
